--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "typescript",
     "flow"
   ],
+  "repository": "github:dslane/react-safe-context",
+  "homepage": "https://github.com/dslane/react-safe-context",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
