--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-safe-context",
-  "version": "1.0.5",
+  "version": "1.0.4",
   "description": "Create React context objects that have built-in safety against having undefined value",
   "author": "Darren Lane",
   "license": "MIT",
@@ -31,9 +31,8 @@
     "build:full": "yarn build:flow && typedoc",
     "prepare": "yarn test && yarn build:flow"
   },
-  "dependencies": {
-    "react": "^16.10.2",
-    "typescript": "^3.6.4"
+  "peerDependencies": {
+    "react": "^16.10.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
@@ -60,10 +59,12 @@
     "flowgen": "^1.10.0",
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
-    "np": "^5.1.1",
+    "np": "^6.3.2",
     "prettier": "^1.18.2",
+    "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "ts-jest": "^24.1.0",
-    "typedoc": "^0.15.0"
+    "typedoc": "^0.17.8",
+    "typescript": "^3.6.4"
   }
 }
