--- a/package.json
+++ b/package.json
@@ -27,47 +27,43 @@
     "build": "tsc --project tsconfig.build.json",
     "build:clean": "tsc --build --clean && yarn build",
     "build:docs": "yarn build:clean && typedoc",
-    "build:flow": "yarn build:clean && node -r esm scripts/convertFlow",
-    "build:full": "yarn build:flow && typedoc",
-    "prepare": "yarn test && yarn build:flow"
+    "build:full": "yarn build:clean && typedoc",
+    "prepare": "yarn test && yarn build:clean"
   },
   "peerDependencies": {
-    "react": "^16.10.2"
+    "react": ">=16.10.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/preset-typescript": "^7.6.0",
-    "@types/enzyme": "^3.10.3",
-    "@types/enzyme-adapter-react-16": "^1.0.5",
-    "@types/jest": "^24.0.19",
-    "@types/jsdom": "^12.2.4",
-    "@types/node": "^12.11.7",
-    "@types/react": "^16.9.9",
-    "@typescript-eslint/eslint-plugin": "^2.4.0",
-    "@typescript-eslint/parser": "^2.4.0",
-    "babel-jest": "^24.9.0",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
-    "enzyme-to-json": "^3.4.3",
-    "eslint": "^6.5.1",
-    "eslint-config-prettier": "^6.4.0",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-typescript": "^7.26.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@types/jest": "^29.5.14",
+    "@types/jsdom": "^21.1.7",
+    "@types/node": "^22.10.1",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "@typescript-eslint/parser": "^8.16.0",
+    "babel-jest": "^29.7.0",
+    "eslint": "^9.16.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-react": "^1.1.7",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.2",
     "esm": "^3.2.25",
-    "flowgen": "^1.10.0",
-    "jest": "^24.9.0",
-    "jest-cli": "^24.9.0",
-    "np": "^6.3.2",
-    "prettier": "^1.18.2",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "ts-jest": "^24.1.0",
-    "typedoc": "^0.22.15",
-    "typescript": "^3.6.4"
+    "jest": "^29.7.0",
+    "jest-cli": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "np": "^10.1.0",
+    "prettier": "^3.4.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "ts-jest": "^29.2.5",
+    "typedoc": "^0.27.2",
+    "typescript": "^5.7.2"
   },
-  "resolutions": {
-    "@types/react": "16.14.26"
-  }
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
