--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "typescript",
     "flow"
   ],
-  "repository": "github:dslane/react-safe-context",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dslane/react-safe-context.git"
+  },
   "homepage": "https://github.com/dslane/react-safe-context",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
