remove flow keyword

--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "react",
     "safe",
     "context",
-    "typescript",
-    "flow"
+    "typescript"
   ],
   "repository": {
     "type": "git",
